main pagelinks fixed made quiz fix on small screen

--- a/quizs/styles/quiz.css
+++ b/quizs/styles/quiz.css
@@ -97,17 +97,20 @@ body {
     font-size: 20px;
 }
 
+.reload {
+    background-color: #1a8765;
+    color: #1a8765;
+}
+
 @media (max-width: 550px) {
     .quiz-container {
         width: 70%;
         padding: 15px;
         margin-bottom: 150px;
     }
+
     #submit {
         width: 200px;
-      
-   
-        
     }
 
     .question {
@@ -117,9 +120,11 @@ body {
     .options label {
         font-size: 14px;
     }
-    .quiz-container{
+
+    .quiz-container {
         position: absolute;
     }
+
     #submit {
         font-size: 16px;
         padding: 8px 16px;
@@ -140,11 +145,16 @@ body {
     #theam-btn-container {
         right: 10vh;
     }
-    .ri-arrow-left-fill,#back {
-font-size: larger;
+
+   
+    #back {
+        font-size: larger;
+        position: relative;
+        left: -300px;
+        bottom: -200px;
 
 
-}
+    }
 
 }
 
@@ -153,9 +163,11 @@ font-size: larger;
         width: 60%;
         padding: 15px;
     }
+
     #submit {
         width: 200px;
     }
+
     .quiz-container {
         max-width: 600px;
     }
@@ -172,13 +184,16 @@ font-size: larger;
         font-size: 18px;
         padding: 10px 20px;
     }
+
     .ri-arrow-left-fill,
-#back {
-font-size: larger;}
+    #back {
+        font-size: larger;
+    }
 
     #feedback {
         margin-top: 35vh;
     }
+
     #sound {
         left: 10vh;
     }
@@ -193,9 +208,11 @@ font-size: larger;}
         width: 40%;
         padding: 15px;
     }
+
     #submit {
         width: 200px;
     }
+
     .quiz-container {
         max-width: 800px;
     }
@@ -216,6 +233,7 @@ font-size: larger;}
     #feedback {
         margin-top: 30vh;
     }
+
     #theam-btn-container {
         right: 20vh;
     }
